<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hostFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/hostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/host_label" />

    <EditText
        android:id="@+id/hostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hostLabel"
        android:layout_below="@+id/hostLabel"
        android:ems="10"
        android:hint="@string/host_hint" />

    <TextView
        android:id="@+id/portLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hostLabel"
        android:layout_below="@+id/hostText"
        android:text="@string/port_label" />

    <EditText
        android:id="@+id/portText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/hostLabel"
        android:layout_below="@+id/portLabel"
        android:ems="10"
        android:hint="@string/port_hint"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/chkEmulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/portText"
        android:text="Emulator" />

    <Button
        android:id="@+id/btnSaveHost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chkEmulator"
        android:text="@string/save_button" />

</RelativeLayout>