<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/erzekeloFragment"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
                <TextView
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/dloadResult"
			        android:text="@string/hello_world" />
			    <Button
			        android:id="@+id/btnDonwload"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_alignLeft="@+id/dloadResult"
			        android:layout_below="@+id/dloadResult"
			        android:text="@string/download" />
			    <ListView
			        android:id="@+id/listView1"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_alignLeft="@+id/dloadResult"
			        android:layout_alignParentBottom="true"
			        android:layout_below="@+id/btnDonwload" >
			    </ListView>
			    <Button
			        android:id="@+id/saveButton"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/dloadResult"
			        android:layout_toRightOf="@+id/btnDonwload"
			        android:text="@string/save_button" />
                </RelativeLayout>
